--- a/slides.tex
+++ b/slides.tex
@@ -298,7 +298,7 @@ $$
 	\frametitle{Introduction}
 	Enters \alert{Bayesian inference}:
 	\begin{itemize}
-		\item infer parameter values by \alert{integrating data and prior knowledge}
+		\item infer parameter values by \alert{integrating data and domain knowledge}
 		\item more efficient for complex models (high dimensionality)
 		\item rigorously quantify and propagate uncertainty in parameter estimates and forecast
 	\end{itemize}
@@ -680,16 +680,16 @@ $$
 	Examine chain mixing:
 	\begin{figure}
 		\centering
-		\includegraphics[width=1\linewidth]{boarding_school/post_theta.pdf}
+		\includegraphics[width=.8\linewidth]{boarding_school/post_theta.pdf}
 	\end{figure}
 }
 
 \frame{
 	\frametitle{Fitting a simple SIR}
-	Posterior predictive check:
+	Posterior predictive checking:
 	\begin{figure}
 		\centering
-		\includegraphics[width=.65\linewidth]{boarding_school/inbed_fit.pdf}
+		\includegraphics[width=.6\linewidth]{boarding_school/inbed_fit.pdf}
 	\end{figure}
 }
 
@@ -700,6 +700,27 @@ $$
 		\centering
 		\includegraphics[width=1\linewidth]{boarding_school/r_code4.png}
 	\end{figure}
+}
+
+\frame{
+	\frametitle{Fitting a simple SIR}
+	Conclusions:
+	\begin{itemize}
+		\item we estimate $\mathcal{R}_0$ to 3.3 (95\% credible interval: 2.8 to 4.0)
+		\item this corresponds to the direct estimation from the final size of the epidemic $q = 512/763 = 0.67$
+		\vspace{-.5em}
+		$$
+		\mathcal{R}_0 = 1 / (1-q) = 3.03
+		$$
+		\item based on \alert{many assumptions}:
+		\begin{itemize}
+			\item[-] common to all SIRs (homogeneous mixing, no incubation...)
+			\item[-] prior distributions (especially on the recovery period)
+			\item[-] complete ascertainment, no asymptomatics
+			\item[-] no initial immunity
+		\end{itemize}
+	\end{itemize}
+		
 }
 
 \frame{
@@ -716,6 +737,71 @@ $$
 
 \frame{
 	\frametitle{Simulations to understand the model}
+	In practice, the situation is often less clear than in the boarding school example:
+	\begin{itemize}
+		\item[-] incomplete data, insufficient domain knowledge
+		\item[-] uncertainty on \alert{necessary model features}
+	\end{itemize}
+	\alert{Fake data} can be used to probe the model and better understand its behaviour:
+	\begin{itemize}
+		\item[-] prior predictive checking
+		\item[-] model reliability checking
+	\end{itemize}	
+}
+
+\frame{
+	\frametitle{Simulations to understand the model}
+	\alert{Prior predictive checking} consists in simulating data from the priors:
+	\begin{itemize}
+		\item visualize priors (especially after transformation)
+		\item this shows the range of data compatible with the model
+		\item it helps understand the \alert{adequacy of the chosen priors}, as it is often easier to elicit expert knowledge on measureable quantities of interest rather than abstract parameter values
+		\bigskip\pause
+		\item remove (or switch off) the likelihood from the \texttt{model} block
+	\end{itemize}
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{boarding_school/stan_code6bis.png}
+	\end{figure}
+}
+
+\frame{
+	\frametitle{Simulations to understand the model}
+	Simulating priors in the boarding school example:
+	\begin{figure}
+		\centering
+		\includegraphics[width=.8\linewidth]{boarding_school/prior_theta.pdf}
+	\end{figure}
+}
+
+\frame{
+	\frametitle{Simulations to understand the model}
+	Prior predictive checking: simulating \alert{epidemic trajectories}
+	\begin{figure}
+		\centering
+		\only<1>{\includegraphics[width=.6\linewidth]{boarding_school/inbed_fit_prior.pdf}}
+		\only<2>{\includegraphics[width=.6\linewidth]{boarding_school/inbed_fit_prior_traj.pdf}}
+	\end{figure}
+}
+
+\frame{
+	\frametitle{Simulations to understand the model}
+	Prior predictive checking brings insight about \alert{non-obvious features}:
+	\begin{itemize}
+		\item while the priors seem large and weakly informative, there is actually not a lot of leeway
+		\item \alert{highly constrained} model: 
+		\begin{itemize}
+		\item[-] if $\beta$ is high, the epidemic will stop rapidly by lack of susceptibles
+		\item[-] if $\beta$ is small, the epidemic will be small
+	\end{itemize}
+	\item the negative binomial might lead to problems in extreme situations, e.g. more cases (>1000) than the overall number of students
+	\end{itemize}
+}
+
+\frame{
+	\frametitle{Simulations to understand the model}
+	\alert{Model reliability checking} consists in attempting to recover chosen parameter values with the model:
+	identifiability issues
 	
 }
 
@@ -723,11 +809,13 @@ $$
 \frame{
 	\frametitle{Acknowledgements \& ressources}
 	\begin{itemize}
-		\item Michael Betancourt's \textit{Introduction to Stan} \url{https://betanalpha.github.io/assets/case_studies/stan_intro.html}
-		\item Daniel Lee's \textit{ODEs in Stan} \\ \url{https://youtu.be/hJ34_xJhYeY}
-		\item Richard McElreath's \textit{Statistical rethinking} \url{https://youtu.be/4WVelCswXo4}
+		\item Michael Betancourt, \textit{Introduction to Stan} \\ \url{https://betanalpha.github.io/assets/case_studies/stan_intro.html}
+		\item Andrew Gelman et al., \textit{Bayesian workflow} \\ \url{https://arxiv.org/abs/2011.01808}
+		\item Daniel Lee, \textit{ODEs in Stan} \\ \url{https://youtu.be/hJ34_xJhYeY}
+		\item Richard McElreath, \textit{Statistical rethinking} \url{https://youtu.be/4WVelCswXo4}
 	
 	\end{itemize}
 }
+
 
 \end{document}
